[project]
name = "chx"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Kouril", email = "david.kouril@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
chx = "chx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
